--- a/websiteproject/index.html
+++ b/websiteproject/index.html
@@ -75,6 +75,6 @@
     <h1 style="text-align: center;">Now, If You Didn't Read The Sentence, (yes,that was one sentence) then you passed your last test. </h1>
     <button onclick="index.html">
         Pass The Test
-    </button> <a id="invis" href="">SAPODFGJJGIEFDVBHDOSIHFVIODI</a>
+    </button> <a id="invis" href="test3.html">SAPODFGJJGIEFDVBHDOSIHFVIODI</a>
     </body>
 </html>
